--- a/src/api/Dockerfile
+++ b/src/api/Dockerfile
@@ -2,16 +2,16 @@ FROM python:3.11-slim
 
 WORKDIR /api
 
-COPY ./api /api
+COPY . .
 
 # Instala gdown para baixar o modelo do google drive
 RUN pip install gdown
 
 # Baixa o modelo treinado
-RUN gdown --id 17c7iQHbJ1j6e_FScGvXnbbqxSvOmBWwr -O /app/cnn_model.h5
+RUN gdown --id 17c7iQHbJ1j6e_FScGvXnbbqxSvOmBWwr -O /api/cnn_model.h5
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 80
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
